--- a/doc/admm.tex
+++ b/doc/admm.tex
@@ -26,5 +26,10 @@
 	\end{pmatrix}U\]
 	\[\varepsilon(u,x) = B(x)U\]
 	\[V\int_{\Omega}H(x) \nabla\cdot C:\varepsilon(u) =  V\int_{\partial \Omega} H(x)^TN^TCB(x)(u-z) + V\int_{\Omega}f^TH(x)\]
-	
+	In reference space
+	\[
+	\int_{\Omega}P(x)UB(x) = \int_{\partial\Omega}H(x)N^TP(x)U + \int_{\Omega}f^TH(x).
+	\]
+\section{Linear Material}
+	P(x) = E(x)B(x)
 \end{document}
