Test hetereogeneous material

--- a/doc/admm.tex
+++ b/doc/admm.tex
@@ -13,7 +13,7 @@
 	Auxiliary variable $\sigma = C\varepsilon(u)$.
 	Multiply by test functions $v$ and $\tau$ and integrate by parts in each element $K$,
 	\begin{align}
-	\int_K \sigma \cdot \tau&=-\int_Ku\nabla\cdot \tau dx +\int_{\partial K}u n\cdot \tau ds\\
+	\int_K \sigma \cdot \tau&=-\int_Ku\nabla\cdot \tau dx +\int_{\partial K}u \cdot n \tau ds\\
 	\int_K \sigma \cdot \nabla v&=\int_K fv dx +\int_{\partial K}\sigma \cdot n v ds.
 	\end{align}
 	Substitute in numerical fluxes $\hat{u}$ and $\hat{\sigma}$ for boundary integrals.
